--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ requests==2.19.1
 requests-unixsocket==0.1.5
 tatsumaki.py==0.1
 youtube-dl==2019.01.24
-PyNaCl==1.3.0
+pynacl==1.3.0
 pycparser==2.19
 cffi==1.11.5
 six==1.12.0
