--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,82 @@
-aiohttp==1.0.5
+aiohttp==3.4.4
 asn1crypto==0.24.0
 async-timeout==3.0.1
 asyncio==3.4.3
+attrs==18.2.0
+Automat==0.7.0
+blinker==1.4
 boto==2.49.0
+certifi==2018.8.24
+cffi==1.11.5
+chardet==3.0.4
+Click==7.0
+cloud-init==18.2
 Cogs==0.4.3
+colorama==0.3.7
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.3.1
+cssselect==1.0.3
+discord==0.0.2
 discord.py==0.16.12
+distro-info==0.18
+Django==2.1.2
+Flask==1.0.2
+httplib2==0.9.2
+hyperlink==18.0.0
+idna==2.7
+idna-ssl==1.1.0
+incremental==17.5.0
+ItsDangerous==1.0.0
+Jinja2==2.10
+jsonpatch==1.16
+jsonpointer==1.10
+jsonschema==2.6.0
+keyring==10.6.0
+keyrings.alt==3.0
+language-selector==0.1
+lxml==4.2.5
+MarkupSafe==1.0
+multidict==4.5.2
+numpy==1.15.4
+oauthlib==2.0.6
+PAM==0.4.2
+parse==1.9.0
+parsel==1.5.0
+pyasn1==0.4.4
+pyasn1-modules==0.2.2
+pycparser==2.19
+pycrypto==2.6.1
+PyDispatcher==2.0.5
+pygobject==3.26.1
+PyHamcrest==1.9.0
+PyJWT==1.5.3
+PyNaCl==1.3.0
+pyOpenSSL==18.0.0
+pyserial==3.4
+python-apt==1.6.2
+python-debian==0.1.32
+pytz==2018.5
+pyxdg==0.25
+PyYAML==3.13
+queuelib==1.5.0
 requests==2.19.1
 requests-unixsocket==0.1.5
-tatsumaki.py==0.1
-youtube-dl==2019.01.24
-pynacl==1.3.0
-pycparser==2.19
-cffi==1.11.5
+Scrapy==1.5.1
+SecretStorage==2.3.1
+service-identity==17.0.0
 six==1.12.0
+ssh-import-id==5.7
+systemd-python==234
+tatsumaki.py==0.1
+Twisted==18.9.0
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.23
+w3lib==1.19.0
+websockets==3.4
+Werkzeug==0.14.1
+yarl==1.2.6
+youtube-dl==2019.1.24
+zope.interface==4.5.0
