--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ parsel==1.5.0
 pyasn1==0.4.4
 pyasn1-modules==0.2.2
 pycparser==2.19
-pycrypto==2.6.1
 PyDispatcher==2.0.5
 PyNaCl==1.3.0
 pyOpenSSL==18.0.0
@@ -30,6 +29,7 @@ pyserial==3.4
 pytz==2018.5
 pyxdg==0.25
 PyYAML==3.13
+requests==2.21.0
 six==1.12.0
 tatsumaki.py==0.1
 youtube-dl==2019.1.24
